# image_resize

./: .gitignore  Cargo.toml
src/: arguments.rs  job.rs  main.rs  resize.rs
