[package]
name = "image_resize"
version = "0.1.0"
authors = ["skuhinek@gmail.com <skuhinek@gmail.com>"]

[dependencies]
clap = "~2.24.2"
image = "0.13.0"
term = "0.4.5"
rayon = "0.7.0"
clippy = {version = "*", optional = true}

[features]
default = []

[dependencies.user]
path = "../user"

[dependencies.pause]
path = "../pause"

[profile.release]
lto = true
panic = "abort"