[package]
name = "image_resize"
version = "0.1.0"
authors = ["skuhinek@gmail.com <skuhinek@gmail.com>"]

[dependencies]
clap = "2.25.0"
image = "0.14.0"
term = "0.4.6"
rayon = "0.7.0"

[features]
default = []

[dependencies.user]
path = "../user"

[dependencies.pause]
path = "../pause"

[profile.release]
# lto = true !!! NE AKTIVIRATI !!! - sophos av na poslu detektira virus
# panic = "abort"